--- a/index.html
+++ b/index.html
@@ -26,12 +26,10 @@
 							<nav id="nav">
 								<ul>
 									<li class="current"><a href="index.html">Home</a></li>
-									<li>
-										<a href="#">Contact Us</a>
-										
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="#">Supplies</a>
+									<li><a href="#">Animal Hospital</a></li>
+									<li><a href="#">Grooming</a></li>
+									<li><a href="#">Contact Us</a></li>
 								</ul>
 							</nav>
 
@@ -44,11 +42,11 @@
 						<div class="row">
 							<div class="col-7 col-12-medium">
 								<h2>Welcome to Pet Land</h2>
-								<p>A place for your pets</p>
+								<p>For all your pet needs</p>
 							</div>
 							<div class="col-5 col-12-medium">
 								<ul>
-									<li><a href="#" class="button large icon solid fa-arrow-circle-right"> Shop Now</a></li>
+									<li><a href="#" class="button large icon solid fa-arrow-circle-right"> Shop Sale Now</a></li>
 									<li><a href="#" class="button alt large icon solid fa-question-circle">Store Locator</a></li>
 								</ul>
 							</div>
@@ -68,7 +66,7 @@
 										<div class="inner">
 											<header>
 												<h2>Runners</h2>
-												<p>Maybe here as well I think</p>
+												<p>Run to your nearest Pet Land!</p>
 											</header>
 											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
 										</div>
@@ -83,7 +81,7 @@
 										<div class="inner">
 											<header>
 												<h2>Hoppers</h2>
-												<p>This is also an interesting subtitle</p>
+												<p>Don't let these deals hop away!</p>
 											</header>
 											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
 										</div>
@@ -98,7 +96,7 @@
 										<div class="inner">
 											<header>
 												<h2>Pouncers</h2>
-												<p>Here's another intriguing subtitle</p>
+												<p>Pounce on these supplies today!</p>
 											</header>
 											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
 										</div>
@@ -118,7 +116,7 @@
 								<!-- Sidebar -->
 									<div id="sidebar">
 										<section class="widget thumbnails">
-											<h3>Interesting stuff</h3>
+											<h3>Our VIP Customers</h3>
 											<div class="grid">
 												<div class="row gtr-50">
 													<div class="col-6"><a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a></div>
@@ -137,7 +135,7 @@
 								<!-- Content -->
 									<div id="content">
 										<section class="last">
-											<h2>So what's this all about?</h2>
+											<h2>New customers save 50% on your first order!</h2>
 											<p>This is <strong>Verti</strong>, a free and fully responsive HTML5 site template by <a href="http://html5up.net">HTML5 UP</a>.
 											Verti is released under the <a href="http://html5up.net/license">Creative Commons Attribution license</a>, so feel free to use it for any personal or commercial project you might have going on (just don't forget to credit us for the design!)</p>
 											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus. Praesent semper bibendum ipsum, et tristique augue fringilla eu. Vivamus id risus vel dolor auctor euismod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus mattis lectus sit amet phasellus quam turpis.</p>
