--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 								<!-- Sidebar -->
 									<div id="sidebar">
 										<section class="widget thumbnails">
-											<h3>Our VIP Customers</h3>
+											<h3>Meet Our VIP Customers</h3>
 											<div class="grid">
 												<div class="row gtr-50">
 													<div class="col-6"><a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a></div>
@@ -139,7 +139,6 @@
 											<p>This is <strong>Verti</strong>, a free and fully responsive HTML5 site template by <a href="http://html5up.net">HTML5 UP</a>.
 											Verti is released under the <a href="http://html5up.net/license">Creative Commons Attribution license</a>, so feel free to use it for any personal or commercial project you might have going on (just don't forget to credit us for the design!)</p>
 											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus. Praesent semper bibendum ipsum, et tristique augue fringilla eu. Vivamus id risus vel dolor auctor euismod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus mattis lectus sit amet phasellus quam turpis.</p>
-											<a href="#" class="button icon solid fa-arrow-circle-right">Continue Reading</a>
 										</section>
 									</div>
 
@@ -156,7 +155,7 @@
 
 								<!-- Links -->
 									<section class="widget links">
-										<h3>Random Stuff</h3>
+										<h3>Dogs</h3>
 										<ul class="style2">
 											<li><a href="#">Etiam feugiat condimentum</a></li>
 											<li><a href="#">Aliquam imperdiet suscipit odio</a></li>
@@ -171,7 +170,7 @@
 
 								<!-- Links -->
 									<section class="widget links">
-										<h3>Random Stuff</h3>
+										<h3>Cats</h3>
 										<ul class="style2">
 											<li><a href="#">Etiam feugiat condimentum</a></li>
 											<li><a href="#">Aliquam imperdiet suscipit odio</a></li>
@@ -206,25 +205,15 @@
 											<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 											<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 											<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-											<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-											<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
 										</ul>
-										<p>1234 Fictional Road<br />
-										Nashville, TN 00000<br />
-										(800) 555-0000</p>
+										<p>1234 Potato Way<br />
+										San Jose, CA 00000<br />
+										(209) 773-0850</p>
 									</section>
 
 							</div>
 						</div>
-						<div class="row">
-							<div class="col-12">
-								<div id="copyright">
-									<ul class="menu">
-										<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-									</ul>
-								</div>
-							</div>
-						</div>
+						
 					</footer>
 				</div>
 
@@ -238,7 +227,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
 			<script data-apikey="xzO62KMXRdmJVTZytshnbA" src="https://us01ccistatic.zoom.us/us01cci/web-sdk/zcc-sdk.js"></script>
 
 	</body>
