--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
 								<!-- Links -->
 									<section class="widget links">
-										<h3>Dogs</h3>
+										<h3>Dog Lovers</h3>
 										<ul class="style2">
 											<li><a href="#">Etiam feugiat condimentum</a></li>
 											<li><a href="#">Aliquam imperdiet suscipit odio</a></li>
@@ -170,7 +170,7 @@
 
 								<!-- Links -->
 									<section class="widget links">
-										<h3>Cats</h3>
+										<h3>Cat Lovers</h3>
 										<ul class="style2">
 											<li><a href="#">Etiam feugiat condimentum</a></li>
 											<li><a href="#">Aliquam imperdiet suscipit odio</a></li>
@@ -185,7 +185,7 @@
 
 								<!-- Links -->
 									<section class="widget links">
-										<h3>Random Stuff</h3>
+										<h3>Animal Lovers</h3>
 										<ul class="style2">
 											<li><a href="#">Etiam feugiat condimentum</a></li>
 											<li><a href="#">Aliquam imperdiet suscipit odio</a></li>
