--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
 									<div id="content">
 										<section class="last">
 											<h2>New customers save 50% on your first order!</h2>
-											<p>Welcome to the Pet Land party zone! Get ready for a wild ride through our store packed with furry, feathered, and finned friends galore!
+											<p>Welcome to the Pet Land party zone! Get ready for a wild ride through our store packed with furry, feathered, and finned friends galore! From doggie delights to chirpy companions and aquatic wonders, we've got it all. Our shelves are stacked with top-notch treats and toys guaranteed to make tails wag and fins flip. 
 											</p>
-											<p>Expert advice? We've got that covered too! Come on in for a pet-tastic experience—you might just leave with a new best friend or a whole zoo at home!
+											<p>Personalized expert advice over video? We've got that covered too! Chat or start a video call with us for a pet-tastic experience!
 											</p>
 										</section>
 									</div>
