--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
 											<h2>New customers save 50% on your first order!</h2>
 											<p>Welcome to the Pet Land party zone! Get ready for a wild ride through our store packed with furry, feathered, and finned friends galore! From doggie delights to chirpy companions and aquatic wonders, we've got it all. Our shelves are stacked with top-notch treats and toys guaranteed to make tails wag and fins flip. 
 											</p>
-											<p>Personalized expert advice over video? We've got that covered too! <b>Chat or start a video call with us for a pet-tastic experience!</b>
+											<p>Personalized expert advice over video? We've got that covered too! 
+											</p>
+											<p><b>Chat or start a video call with us for a pet-tastic experience!</b>
 											</p>
 										</section>
 									</div>
