--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
 											<div class="grid">
 												<div class="row gtr-50">
 													<div class="col-6"><a href="#" class="image fit"><img src="images/bird.jpg" alt="" /></a></div>
-													<div class="col-6"><a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a></div>
-													<div class="col-6"><a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a></div>
-													<div class="col-6"><a href="#" class="image fit"><img src="images/goldfish.jpg" alt="" /></a></div>
+													<div class="col-6"><a href="#" class="image fit"><img src="images/cat.jpg" alt="" /></a></div>
+													<div class="col-6"><a href="#" class="image fit"><img src="images/shitzu.jpg" alt="" /></a></div>
+													<div class="col-6"><a href="#" class="image fit"><img src="images/fish.jpg" alt="" /></a></div>
 													<div class="col-6"><a href="#" class="image fit"><img src="images/hamster.jpg" alt="" /></a></div>
 												</div>
 											</div>
