--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 						<!-- Logo -->
 							<div id="logo">
 								<h1><a href="index.html">Pet Land</a></h1>
-								<span>by exmoon</span>
 							</div>
 
 						<!-- Nav -->
@@ -105,6 +104,7 @@
 													<div class="col-6"><a href="#" class="image fit"><img src="images/cat.jpg" alt="" /></a></div>
 													<div class="col-6"><a href="#" class="image fit"><img src="images/shitzu.jpg" alt="" /></a></div>
 													<div class="col-6"><a href="#" class="image fit"><img src="images/fish.jpg" alt="" /></a></div>
+													<div class="col-6"><a href="#" class="image fit"><img src="images/bunny.jpg" alt="" /></a></div>
 													<div class="col-6"><a href="#" class="image fit"><img src="images/hamster.jpg" alt="" /></a></div>
 												</div>
 											</div>
@@ -122,6 +122,8 @@
 											</p>
 											<p>Personalized expert advice over video? We've got that covered too! 
 											</p>
+											<br>
+											<br>
 											<p><b>Chat or start a video call with us for a pet-tastic experience!</b>
 											</p>
 										</section>
