--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
 								<!-- Links -->
 									<section class="widget links">
-										<h3>Volunteer Now</h3>
+										<h3>Volunteer</h3>
 									
 									</section>
 
