--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 						<!-- Logo -->
 							<div id="logo">
-								<h1><a href="index.html">PET LAND</a></h1>
+								<h1><a href="index.html">Pet Land</a></h1>
 							</div>
 
 						<!-- Nav -->
