--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 					<header id="header" class="container">
 
 						<!-- Logo -->
-							<div id="logo">
+							
 								<h1><a href="index.html">Pet Land</a></h1>
-							</div>
 
 						<!-- Nav -->
 							<nav id="nav">
@@ -192,7 +191,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script data-apikey="xzO62KMXRdmJVTZytshnbA" src="https://us01ccistatic.zoom.us/us01cci/web-sdk/zcc-sdk.js"></script>
+			<script data-apikey="xzO62KMXRdmJVTZytshnbA" src="https://us01ccistatic.zoom.us/us01cci/web-sdk/zcc-sdk.js" data-draggable-invitation="true"></script>
 
 	</body>
 </html>
