--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 	<head>
-		<title>Eddie Moon Demo Site</title>
+		<title>MOON - DEMO SITE</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
