--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>FurHerd</title>
+      <title>Pet Land Retail</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -36,7 +36,7 @@
             <li><a class="active" href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
-            <li><a href="testimonial.html">Testimonial</a></li>
+            <li><a href="testimonial.html">Happy Customers</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="contact.html">Contact Us</a></li>
       </div>
@@ -48,7 +48,7 @@
              <div class="row">
                <div class="col-md-4 d_none">
                  <ul class="con_icon">
-                   <li><a href="javascript:void(0)"><i class="fa fa-phone" aria-hidden="true"></i> Call +01 1234567890</a></li>
+                   <li><a href="javascript:void(0)"><i class="fa fa-phone" aria-hidden="true"></i> Call (209)773-0850</a></li>
                  </ul>
                </div>
                <div class="col-md-4">
@@ -62,7 +62,7 @@
                <div class="col-md-4 d_none">
                  <ul class="login_deteil text_align_right">
                    <li><a href="javascript:void(0)">Wishlist</a></li>
-                   <li><a href="javascript:void(0)">Log In</a></li>
+                   <li><a href="javascript:void(0)">My Account</a></li>
                    <li><a href="javascript:void(0)">Register</a></li>
                  </ul>
                </div>
@@ -74,7 +74,7 @@
                <div class="row">
                   <div class="col-sm-3">
                      <div class="logo">
-                        <a href="index.html">Fur<span>Herd</span></a>
+                        <a href="index.html">Pet<span>Land</span></a>
                      </div>
                   </div>
                   <div class="col-sm-9">
