removed extra pages

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="col-md-12">
               <div  class=" banner_main">
                 <div class="bluid">
-                  <h1>An Online Pet Store For Everyone</h1>
+                  <h1>GOT TREATS?</h1>
                 </div>
               </div> 
             </div>
