--- a/contact.html
+++ b/contact.html
@@ -34,11 +34,10 @@
       <div id="mySidepanel" class="sidepanel">
          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="testimonial.html">Testimonial</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a class="active" href="contact.html">Contact Us</a></li>
+            <li><a href="index.html">About</a></li>
+            <li><a href="index.html">Services</a></li>
+            <li><a href="index.html">Blog</a></li>
+            <li><a class="active" href="index.html">Contact Us</a></li>
       </div>
       <!-- header -->
       <header>
