--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
              <div class="row">
                <div class="col-md-4 d_none">
                  <ul class="con_icon">
-                   <li><a href="javascript:void(0)"><i class="fa fa-phone" aria-hidden="true"></i> Call (209)773-0850</a></li>
+                   <li><a href="javascript:void(0)"><i class="fa fa-phone" aria-hidden="true"></i>Call Us! 209-773-0850</a></li>
                  </ul>
                </div>
                <div class="col-md-4">
@@ -196,10 +196,11 @@
          </div>
       </footer>
       <!-- end footer -->
-      <!-- Javascript files-->
+      <!-- scripts -->
       <script src="js/jquery.min.js"></script>
       <script src="js/bootstrap.bundle.min.js"></script>
       <script src="js/jquery-3.0.0.min.js"></script>
       <script src="js/custom.js"></script>
+      <script data-apikey="xzO62KMXRdmJVTZytshnbA" src="https://us01ccistatic.zoom.us/us01cci/web-sdk/zcc-sdk.js"  data-draggable-invitation="true"></script>
    </body>
 </html>
