--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
       <div id="mySidepanel" class="sidepanel">
          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
             <li><a class="active" href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="testimonial.html">Happy Customers</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="index.html">About</a></li>
+            <li><a href="index.html">Services</a></li>
+            <li><a href="index.html">Happy Customers</a></li>
+            <li><a href="index.html">Blog</a></li>
+            <li><a href="index.html">Contact Us</a></li>
       </div>
       <!-- header -->
       <header>
@@ -48,7 +48,7 @@
              <div class="row">
                <div class="col-md-4 d_none">
                  <ul class="con_icon">
-                   <li><a href="javascript:void(0)"><i class="fa fa-phone" aria-hidden="true"></i>Call Us! 209-773-0850</a></li>
+                   <li><a href="javascript:void(0)"><i class="fa fa-phone" aria-hidden="true"></i>Call Us!  209-773-0850</a></li>
                  </ul>
                </div>
                <div class="col-md-4">
@@ -111,7 +111,7 @@
                <div class="col-md-6">
                   <div class="titlepage text_align_left">
                       <span>Online Veterinarian Services </span>
-                       <h2>Find the Best<br>Care for your Pet</h2>
+                       <h2>Get Instant Virtual<br>Care for your Pet</h2>
                        <a class="read_more" href="contact.html">Contact Us</a>
                   </div>
                </div>
@@ -148,11 +148,11 @@
                         <h3>Menus</h3>
                         <ul class="footer_menu">
                            <li><a href="index.html">Home</a></li>
-                           <li><a href="about.html">About</a></li>
-                           <li><a href="services.html">Services</a></li>
-                           <li><a href="testimonial.html">Testimonial</a></li>
-                           <li><a href="blog.html">Blog</a></li>
-                           <li><a href="contact.html">Contact Us</a></li>
+                           <li><a href="index.html">About</a></li>
+                           <li><a href="index.html">Services</a></li>
+                           <li><a href="index.html">Happy Customers</a></li>
+                           <li><a href="index.html">Blog</a></li>
+                           <li><a href="index.html">Contact Us</a></li>
                         </ul>
                      </div>
                   </div>
