--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                <div class="col-md-6">
                   <div class="titlepage text_align_left">
                       <span>Online Veterinarian Services </span>
-                       <h2>Get Instant Video<br>Care for your Pet</h2>
+                       <h2>Get Instant Video<br>Care For Your Pet</h2>
                        <a class="read_more" href="contact.html">Contact Us</a>
                   </div>
                </div>
