--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Pet Land Retail</title>
+      <title>PET LAND RETAIL</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -48,7 +48,7 @@
              <div class="row">
                <div class="col-md-4 d_none">
                  <ul class="con_icon">
-                   <li><a href="javascript:void(0)"><i class="fa fa-phone" aria-hidden="true"></i>Call Us!  209-773-0850</a></li>
+                   <li><a href="javascript:void(0)"><i class="fa fa-phone" aria-hidden="true"></i>Call Us!  +1 209-773-0850</a></li>
                  </ul>
                </div>
                <div class="col-md-4">
@@ -112,7 +112,7 @@
                   <div class="titlepage text_align_left">
                       <span>Online Veterinarian Services </span>
                        <h2>Get Instant Video<br>Care For Your Pet</h2>
-                       <a class="read_more" href="https://demo.emoon.site/?campaign_id=3t-wDGzYRJ-jm3QR6RXq9Q&channel=video">Start Virtual Vet Visit</a>
+                       <a class="read_more" href="https://demo.emoon.site/?campaign_id=3t-wDGzYRJ-jm3QR6RXq9Q&channel=video">Start Your Virtual Vet Visit</a>
                   </div>
                </div>
             </div>
