--- a/index.html
+++ b/index.html
@@ -201,6 +201,6 @@
       <script src="js/bootstrap.bundle.min.js"></script>
       <script src="js/jquery-3.0.0.min.js"></script>
       <script src="js/custom.js"></script>
-      <script data-apikey="B6q-6UrkQlWSOOaNPEfRgw" data-env="us01" src="https://us01ccistatic.zoom.us/us01cci/web-sdk/zcc-sdk.js"></script>
+      <script data-apikey="xzO62KMXRdmJVTZytshnbA" src="https://us01ccistatic.zoom.us/us01cci/web-sdk/zcc-sdk.js"  data-draggable-invitation="true"></script>
    </body>
 </html>
