--- a/index.html
+++ b/index.html
@@ -131,7 +131,10 @@
       </script>
 
       <!-- google form -->
+   
+   <center>
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdYFRELOT3xnI702DgMwTv8EEo61hUd4GYHmUHk6Vt3SH4vLQ/viewform?embedded=true" width="640" height="824" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+   </center>
         
       <!-- footer -->
       <footer>
