--- a/index.html
+++ b/index.html
@@ -122,6 +122,11 @@
       <!-- end pet -->
 
       <!-- hubspot form -->
+
+   <br>
+   <br>
+   
+   <center>
       <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
       <script>
         hbspt.forms.create({
@@ -129,9 +134,16 @@
          formId: "d232a5b3-0102-4708-b8b6-17f5f25544ad"
   });
       </script>
+   </center>
+
+   <br>
+   <br>
 
       <!-- google form -->
    
+   <br>
+   <br>
+
    <center>
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdYFRELOT3xnI702DgMwTv8EEo61hUd4GYHmUHk6Vt3SH4vLQ/viewform?embedded=true" width="640" height="824" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
    </center>
