--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
    <br>
    <br>
 
-   <center>
+  <div align=center>
       <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
       <script>
         hbspt.forms.create({
@@ -134,7 +134,7 @@
          formId: "d232a5b3-0102-4708-b8b6-17f5f25544ad"
          });
       </script>
-   </center>
+   </div>
 
    <br>
    <br>
